--- a/webapp/app/home/hero/hero.module.css
+++ b/webapp/app/home/hero/hero.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: row;
   column-gap: 4rem;
-  padding: 10rem 5rem 0 5rem;
+  padding: 10rem 0 0 0;
 }
 
 .introduction,
@@ -37,4 +37,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.projectArrow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrow {
+  margin-top: 0.5rem;
+  -webkit-animation: VerticalBob 1s infinite alternate;
+  -webkit-animation-timing-function: ease-out;
+  animation: VerticalBob 1s infinite alternate;
+  animation-timing-function: ease-out;
+}
+
+@keyframes VerticalBob {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@-webkit-keyframes VerticalBob {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
