--- a/webapp/components/scroll-arrow/scroll-arrow.module.css
+++ b/webapp/components/scroll-arrow/scroll-arrow.module.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: rgb(209, 222, 222);
+  color: var(--dulled-hex);
   transition: color var(--transition-time);
 }
 
 .container:hover {
   cursor: pointer;
-  color: rgb(var(--foreground-rgb));
+  color: var(--foreground-hex);
 }
 
 .arrow {
