create section component for home

--- a/webapp/app/globals.css
+++ b/webapp/app/globals.css
@@ -1,10 +1,10 @@
 :root {
   --foreground-hex: #1a2323;
-  --background-hex-primary: #f7f9f9;
+  --background-hex-primary: white;
   /* --background-hex-secondary: #bbd1ea; */
   --dulled-hex: #2c3a3a;
 
-  --navbar-height: 4rem;
+  --navbar-height: 6rem;
   --transition-time: 0.3s;
 }
 
@@ -80,7 +80,7 @@ html {
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: visible;
 }
 
 body {
@@ -95,7 +95,7 @@ a {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 @media (prefers-color-scheme: dark) {
