--- a/webapp/components/navigation/navbar/navbar.module.css
+++ b/webapp/components/navigation/navbar/navbar.module.css
@@ -3,6 +3,24 @@
   flex-direction: row;
   justify-content: space-between;
   height: var(--navbar-height);
+  max-height: 6rem;
+  min-height: 4rem;
+  z-index: 999;
+  padding: 0 4rem;
+
+  top: 0;
+  left: 0;
+  position: sticky;
+
+  background: var(--background-hex-primary);
+  transition: all 0.5s ease-in-out;
+}
+
+.container.scrolled {
+  background: rgba(255, 255, 255, 0.8);
+  /* transform: scaleY(2/3); */
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
 }
 
 .logo {
@@ -13,5 +31,7 @@
 
 .buttons {
   display: flex;
-  column-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2rem;
 }
